--- a/finance_flutter/web/index.html
+++ b/finance_flutter/web/index.html
@@ -30,6 +30,21 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+<script>
+  var FACEBOOK_APP_ID = "";
+  window.fbAsyncInit = function () {
+    FB.init({
+      appId: FACEBOOK_APP_ID,
+      cookie: true,
+      xfbml: true,
+      version: "v9.0",
+    });
+    FB.AppEvents.logPageView();
+  };
+</script>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js" ></script>
+<script src="flutter_facebook_auth.js" type="application/javascript" ></script>
+
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
@@ -41,5 +56,29 @@
     }
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+       https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-analytics.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "",
+      authDomain: "finance-f1ae0.firebaseapp.com",
+      projectId: "finance-f1ae0",
+      storageBucket: "finance-f1ae0.appspot.com",
+      messagingSenderId: "892465571121",
+      appId: "",
+      measurementId: ""
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
+  <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-auth.js"></script>
 </body>
 </html>
